[package]
name = "linear-dynamic-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = {version="1.23.3", features = ["v4", "serde"]}
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }